--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div class="container">
       <h2>About Me</h2>
       <p>I'm from Addanki, and I am deeply interested in web design and app design. As an IT student, I enjoy creating visually appealing and user-friendly interfaces.</p>
+      <a href="cv.pdf" download class="download-cv">Download CV</a>
     </div>
   </section>
 
@@ -75,6 +76,27 @@
       </div>
     </div>
   </section>
+  <!-- Education Section -->
+<section class="education">
+  <h2><strong>Education</strong></h2>
+  <div class="container">
+    <div class="education-item">
+      <i class="fas fa-school"></i>
+      <h3>10th Class</h3>
+      <p>From Sri Chaitanya School (Addanki)</p>
+    </div>
+    <div class="education-item">
+      <i class="fas fa-graduation-cap"></i>
+      <h3>Intermediate</h3>
+      <p>From Arka Junior College (Guntur)</p>
+    </div>
+    <div class="education-item">
+      <i class="fas fa-laptop-code"></i>
+      <h3>B.Tech</h3>
+      <p>Studying at RVRJCC (Chowdavaram)</p>
+    </div>
+  </div>
+</section>
 
   <!-- Favorites Section -->
   <section id="favorites" class="favorites">
